apps/base/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 9696
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: prowlarr
