apps/base/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prowlarr.cruznet.io`)
    kind: Rule
    services:
    - name: prowlarr
      kind: Service
      port: 9696
  tls:
    secretName: prowlarr-cert
